--- a/tagsold.html
+++ b/tagsold.html
@@ -31,6 +31,12 @@ header-img: "img/bigshows/coding3.jpg"
 				{% endfor %}
 			</div>
 
+<!--             <blockquote class="tag-comments">
+                标签命名规范：
+                    <li>行业观察、职位、公司优先使用中文</li>
+                    <li>外国产品、术语优先使用英文</li>
+            </blockquote> -->
+
             <!-- 标签列表 -->
 			{% for tag in site.tags %}
 			<div class="one-tag-list">
